# education

./: .gitignore  CMakeLists.txt  README.md
cpp/2024_01_18_async_aggregation_engine/: build.sh  engine.cpp  engine.h  main.cpp
cpp/alghoritms/morris_traversal/: main.cpp
cpp/alghoritms/quick_search/: main.cpp
cpp/cpp_20_news_plays/: concepts.cpp  concepts2.cpp  format.cpp
cpp/cpp_20_news_plays/modules/: bar.cpp  foo2.cppm
cpp/leetcode/: a.out  atoi.cpp  comb_sum.cpp  longest_palindrome.cpp  longest_substr.cpp
cpp/multiply_matrix_effective/: CMakeLists.txt  run_test.sh
cpp/multiply_matrix_effective/src/: eiden.hpp  helpers.h  main.cpp  main_perf.cpp  naive.hpp  naive_reverse.hpp  register256_float.hpp  register512_float.hpp  unroll_nested.hpp
cpp/naive_trade_sys/server/: main.cpp
cpp/otus-cpp/otus-cpp-task03-allocator/: .travis.yml
cpp/otus-cpp/otus-cpp-task09-range_notready/: .travis.yml  CMakeLists.txt
cpp/otus-cpp/otus-cpp-task10-bulkmt/: CMakeLists.txt
cpp/otus-cpp/otus-cpp-task10-bulkmt/src/: data_handler.h  input_reader.cpp  input_reader.h  main.cpp
cpp/otus-cpp/otus-cpp-task11-async/: CMakeLists.txt
cpp/otus-cpp/otus-cpp-task11-async/src/: data_handler.h  data_storage.h  input_reader.h
cpp/otus-cpp/otus-cpp-task13-join_server/: CMakeLists.txt
cpp/plays/: tmpl_fact_and_tuple.cpp
cpp/plays/20240122_async_executor/: build_run.sh  main.cpp
cpp/plays/2024_01_14_orderbook/: main.cpp
cpp/plays/2024_01_15_cycle_buffer_queue/: main.cpp
cpp/plays/cpp_20_news_plays/: concepts.cpp  spaceship.cpp
cpp/plays/deadlock/: main.cpp
cpp/plays/find_func_place/: main.cpp  run.sh
cpp/plays/flags_configurer/: main.cpp
cpp/plays/m1_matrix/: .gitignore  CMakeLists.txt  main.cpp  run.sh
cpp/plays/orderbook_2024_01_14/: main.cpp  test_input.txt
cpp/plays/play_virtual/: main.cpp  run.sh
cpp/plays/pointers/: main.cpp
cpp/plays/sfinae_for_parents/: main.cpp
cpp/plays/shared_memory_vs_socket/: reader.cpp
cpp/plays/string_creation/: main.cpp
cpp/plays/string_impl/: string.cpp  string.hpp  tests.cpp
cpp/type_sizes/: a.out  main.cpp
cpp/web_server_compare/: CMakeLists.txt  README.md
cpp/web_server_compare/scripts/: run.sh
cpp/web_server_compare/scripts/perf/: multiple-url-path.lua  paths.txt  run.sh
cpp/web_server_compare/src/: data.hpp  main.cpp  servers.hpp  tool.hpp  worker.hpp
cpp/worker_prioritization/: CMakeLists.txt  README.md  run.sh  run_test.sh
crypto/educhain/: .gitignore  Cargo.toml  README.md
crypto/educhain/src/: main.rs
crypto/educhain/src/blockchain/: block.rs  chain.rs
crypto/ton_stepic_first_contract/: package.json
crypto/ton_stepic_first_contract_part1/: package.json
crypto/ton_stepic_first_contract_part2/: package.json
crypto/tonlib_plays/: Cargo.toml
etudes/2_life/: CMakeLists.txt  run.sh  test.sh
etudes/2_life/src/: iteration_perf.cpp  life.h  life2.h  main.cpp
go/channel_sync_echo/: main.go
go/test_map_memory/: main.go
otus-cpp-task01-helloworld/: .travis.yml
otus-cpp-task02-ip_filter/src/: libs.h
otus-cpp-task03-allocator/src/: allocator.h
otus-cpp-task04-print_ip/: .travis.yml  Doxyfile
otus-cpp-task04-print_ip/src/: print_lib.h
otus-cpp-task06-bulk/: CMakeLists.txt
otus-cpp-task06-bulk/src/: input_reader.h
otus-cpp-task07-nickname/: .travis.yml  data.txt
otus-cpp-task1-helloworld/: CMakeLists.txt
otus-cpp-task1-helloworld/src/: version.cpp.in  version.h
otus-cpp-task1-helloworld/tests/: test_version.cpp.in
otus-cpp-task10-bulkmt/: .travis.yml
otus-cpp-task10-bulkmt/src/: data_handler.cpp
otus-cpp-task11-async/: .travis.yml
otus-cpp-task11-async/src/: async.cpp  data_handler.cpp  input_reader.cpp
otus-cpp-task11-async/test_data/: data.txt
otus-cpp-task12-bulk_server/: CMakeLists.txt
otus-cpp-task12-bulk_server/src/: main.cpp
otus-cpp-task13-join_server/: .travis.yml
otus-cpp-task13-join_server/src/: db.cpp  db.h  main.cpp
otus-cpp-task2-ip_filter/: .gitignore  CMakeLists.txt
otus-cpp-task2-ip_filter/tests/: ip_filter_tests.cpp
otus-cpp-task3-allocator/: CMakeLists.txt
otus-cpp-task3-allocator/src/: container.h  main.cpp
otus-cpp-task4-print_ip/: CMakeLists.txt  README.md
otus-cpp-task4-print_ip/src/: main.cpp
otus-cpp-task5-matrix/: .travis.yml  CMakeLists.txt
otus-cpp-task5-matrix/src/: tests.cpp
otus-cpp-task6-bulk/: .travis.yml
otus-cpp-task6-bulk/src/: data_handler.cpp  data_storage.h  input_reader.cpp
otus-cpp-task7-nickname/: CMakeLists.txt
otus-cpp-task8-bayan/: .travis.yml  CMakeLists.txt  README.md
otus-cpp-task8-bayan/src/: argparse.h  config.h  data_checker.h  main.cpp
otus-cpp-task9-range_notready/src/: main.cpp
python/algorithms/: README.md
python/checkio_py_solutions/: README.md
python/multiprocessing/: accumulate_dict.py
rust/mysql_cdc_plays/: Cargo.toml
rust/otus_rust_2023/: README.md  pack_task.sh
rust/otus_rust_2023/13_smart_home/: Cargo.toml  README.md
rust/otus_rust_2023/13_smart_home/src/: main.rs  thermo_udp_cli.rs
rust/otus_rust_2023/13_smart_home/src/devices/: socket.rs  thermo.rs
rust/otus_rust_2023/13_smart_home/src/house/: house.rs  mod.rs  traits.rs
rust/otus_rust_2023/13_smart_home/src/response_tmpl/: error.html  error.txt  index.html
rust/otus_rust_2023/13_smart_home/tests/: device_visitor_tests.rs  house_tests.rs
rust/otus_rust_2023/14_smart_home/: Cargo.toml  README.md
rust/otus_rust_2023/14_smart_home/src/: house_gui_cli.rs  house_http_cli.rs  main.rs
rust/otus_rust_2023/14_smart_home/src/devices/: mod.rs  thermo.rs  visitors.rs
rust/otus_rust_2023/14_smart_home/src/house/: errors.rs  house.rs  room.rs
rust/otus_rust_2023/14_smart_home/src/response_tmpl/: index.txt
rust/otus_rust_2023/14_smart_home/tests/: device_visitor_tests.rs  devices_tests.rs  house_tests.rs
rust/otus_rust_2023/15_smart_home/: Cargo.toml  README.md  build.rs
rust/otus_rust_2023/15_smart_home/socket_lib/: Cargo.toml
rust/otus_rust_2023/15_smart_home/socket_lib/src/: lib.rs
rust/otus_rust_2023/15_smart_home/src/: main.rs
rust/panic_moka/: Cargo.toml
rust/perf_check/: Cargo.toml
(+190 files in other folders)
