cmake_minimum_required(VERSION 3.8)

add_subdirectory(otus-cpp-task1-helloworld)
add_subdirectory(otus-cpp-task10-bulkmt)
add_subdirectory(otus-cpp-task11-async)
add_subdirectory(otus-cpp-task12-bulk_server)
add_subdirectory(otus-cpp-task13-join_server)
add_subdirectory(otus-cpp-task2-ip_filter)
add_subdirectory(otus-cpp-task3-allocator)
add_subdirectory(otus-cpp-task4-print_ip)
add_subdirectory(otus-cpp-task5-matrix)
add_subdirectory(otus-cpp-task6-bulk)
add_subdirectory(otus-cpp-task7-nickname)
add_subdirectory(otus-cpp-task8-bayan)
add_subdirectory(otus-cpp-task9-range_notready)