cmake_minimum_required(VERSION 3.8)

add_subdirectory(otus-cpp-task01-helloworld)
add_subdirectory(otus-cpp-task02-ip_filter)
add_subdirectory(otus-cpp-task03-allocator)
add_subdirectory(otus-cpp-task04-print_ip)
add_subdirectory(otus-cpp-task05-matrix)
add_subdirectory(otus-cpp-task06-bulk)
add_subdirectory(otus-cpp-task07-nickname)
add_subdirectory(otus-cpp-task08-bayan)
add_subdirectory(otus-cpp-task09-range_notready)
add_subdirectory(otus-cpp-task10-bulkmt)
add_subdirectory(otus-cpp-task11-async)
add_subdirectory(otus-cpp-task12-bulk_server)
add_subdirectory(otus-cpp-task13-join_server)
