[package]
name = "educhain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
log = "0.4.21"
env_logger = "0.11.3"
anyhow = "1.0.81"

tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }

[dev-dependencies]
tempdir = "0.3.7"