[package]
name = "smart_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.12.0"
log = "0.4.20"
tera = "1"
include_dir = "0.7.1"
serde_json = { version = "1.0"}
url = "2.4.1"
thiserror = "1.0.51"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
tokio = {version="1.34.0", features = ["rt", "macros", "rt-multi-thread"]}
project-root = "0.2.2"

[[bin]]
name = "udp_cli"
path = "src/udp_cli.rs"