workspace = { members = ["socket_lib"] }
[package]
name = "smart_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
socket_lib = { version = "0.1.0", path = "socket_lib" }

[[bin]]
name = "socket_cli"
path = "src/main.rs"
